src/multi-colored-folders.scss
@use "./shared/index.scss" as shared;
@use "sass:list";
@use "sass:map";

%line-wrap-for-nav-title {
  color: var(--FoldText);
  line-height: 1.5em;
  max-height: 3.2em;
  max-width: 90%;
  text-overflow: ellipsis;
  white-space: pre-wrap;
}
/*
A-source: https://forum.obsidian.md/t/adding-color-to-obsidian-a-rainbow-of-possibility/12805/11
B-source: https://raw.githubusercontent.com/obsidian-community/obsidian-hub/main/02%20-%20Community%20Expansions/02.05%20All%20Community%20Expansions/CSS%20Snippets/Files%20explorer%20relations%20%26%20color%20%28Mara-Li%29.md
*/

/* Remove collapse arrow from top level folders */
.nav-files-container {
  margin: 0px 5px;
  // Wrap all folder titles.
  .nav-folder {
    border-radius: 0.5em 2em 0.4em 0.2em;

    .nav-folder-title {
      .nav-folder-title-content {
        @extend %line-wrap-for-nav-title;
      }
    }
  }

  .nav-folder {
    .nav-folder-children .nav-folder-children {
      margin-left: 0;
      padding-left: 0;
      border-left: unset !important;
      border-radius: 0px;
      transition: all 400ms ease-in;
    }
  }

  .nav-folder {
    > .nav-folder-children {
      .nav-file {
        .nav-file-title {
          padding-left: 5px;
          // line-height: 1.4em;
          // max-height: 3.2em;

          // add a line
          &:after {
            width: 80%;
            border-bottom: 1px solid shared.$material-color-red-900;
            position: absolute;
            content: "";
            bottom: 1px;
            display: block;
            transform: translate(-50%, 0);
            left: 65%;
          }
          &.is-active {
            // active file increase font size and removes normal highlight marker
            background-color: var(--theme-color-translucent-1);
            border-radius: 0.5em 2em 0.4em 0.2em;
          }

          .nav-file-title-content {
            @extend %line-wrap-for-nav-title;
          }
        }
      }
    }
  }

  // FUDGE FOR 1.6.3 overrides on inline indent style.
  > div > .nav-file > .nav-file-title * {
    margin-left: -1rem !important;
  }
}

@mixin renderFoldColorsMixin() {
  $foldA-datum: (
    prefix: "A_",
    color: "--FoldA"
  );
  $foldB-datum: (
    prefix: "B_",
    color: "--FoldB"
  );
  $foldC-datum: (
    prefix: "C_",
    color: "--FoldC"
  );
  $foldD-datum: (
    prefix: "D_",
    color: "--FoldD"
  );
  $foldZ-datum: (
    prefix: "Y_",
    color: "--FoldY"
  );
  $foldY-datum: (
    prefix: "Z_",
    color: "--FoldZ"
  );

  $file-fold-colors-map: ($foldA-datum, $foldB-datum, $foldC-datum, $foldD-datum, $foldY-datum, $foldZ-datum);
  @each $foldmip in $file-fold-colors-map {
    $dp: map-get($foldmip, "prefix");
    $fold-color: map-get($foldmip, "color");
    .nav-files-container > div > .nav-folder {
      &:has(.nav-folder-title[data-path^="#{$dp}"]) {
        background-color: var(#{$fold-color}) !important;
      }
      .nav-folder-children {
        .nav-folder:has(.nav-folder-title[data-path^="#{$dp}"]) {
          overflow: hidden;
          background-color: var(#{$fold-color + "-1"}) !important;
          margin-bottom: 1px;
          > .nav-folder-children {
            background-color: var(--theme-color-translucent-1);
            overflow: hidden;
            > .nav-folder {
              .nav-folder-title {
                background: var(#{$fold-color});
              }
            }
          }
        }
      }
    }
  }
}

// 3rd level folders
// .nav-files-container
//   .nav-folder
//   .nav-folder-children
//   .nav-folder
//   .nav-folder-children
//   .nav-folder
//   .nav-folder-title {
//   // background: blue !important;
//   margin: 0 !important;
// }
@include renderFoldColorsMixin();

.nav-folder {
  border-radius: 0.5em 2em 0.4em 0.2em;
  > .nav-folder.is-collapsed {
    > .nav-folder-title {
      border-radius: 5px;
    }
  }
  > .nav-folder-title-content {
    padding-left: 0.5em !important;
  }
  > .nav-folder-children {
    // General Nav Folder Children (this is the part that expands from each top level folder)

    border-radius: 0px 0px 5px 5px;
    padding: 0.1em 0.2em;
  }
  > .nav-folder-title {
    // Set up explorer container margins
    // Shift into unused left-side gutter (filenames in the file explorer)
    color: var(--FoldText);
    padding-left: 0.3em !important;
    margin-top: 0.1em;
    border-radius: 0.5em 1em 0em 1px;

    > .nav-folder-collapse-indicator {
      display: none; // Remove collapse arrow from top level folders
    }
  }
}
// Scrollbars eliminate on File Explorer
.workspace-leaf-content[data-type="file-explorer"] ::-webkit-scrollbar {
  width: 0px;
  height: 0px;
}

// v1.6.3
// 1 Bug fixes Due to css changes in Obsidian the old nested code for multi colored pages has been broken.
// 2 A consequence of this bug is a break in hidden tag folders.Underscore does not turn invisible
// 3 The following is a temporary fix.

.nav-files-container {
  .nav-file-title[data-path^="_"] {
    //   // apply style to any child of a _ prefixed virtual file (only works in root)
    //   // border-bottom: 1px solid shared.$primaryAlt;
    display: none;
  }
}

// Relationship lines for 2nd, 3rd, and 4th level folders

.nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-file {
  border-left: var(--nestlinestyle1) var(--nestlinesize1) var(--nestlinecolor1);
  // margin-left: 12px;
}
.nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder {
  border-left: var(--nestlinestyle1) var(--nestlinesize1) var(--nestlinecolor1);
  // margin-left: 12px;
}

.nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-file {
  border-left: var(--nestlinestyle2) var(--nestlinesize2) var(--nestlinecolor2);
  // margin-left: 12px;
}
.nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder {
  border-left: var(--nestlinestyle2) var(--nestlinesize2) var(--nestlinecolor2);
  // margin-left: 12px;
}

.nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-file {
  border-left: var(--nestlinestyle3) var(--nestlinesize3) var(--nestlinecolor3);
  // margin-left: 12px;
}
.nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder
  > .nav-folder-children
  > .nav-folder {
  border-left: var(--nestlinestyle3) var(--nestlinesize3) var(--nestlinecolor3);
  // margin-left: 12px;
}

// For folders nested in the second level
.nav-folder-children {
  background-color: var(--theme-color-translucent-1);
  border-radius: 0.5em 2em 0.4em 0.2em;
}

.nav-folder > .nav-folder-children > .nav-folder > *,
.nav-folder > .nav-folder-children > .nav-folder > * {
  + .nav-folder-children {
    margin-left: 0.5em !important;
    background: var(--theme-color-translucent-2);
  }
}

